[gd_scene load_steps=10 format=3 uid="uid://ykvncirjiar8"]

[ext_resource type="Script" path="res://Towers/IceTower/IceTower.gd" id="1_vn6cj"]
[ext_resource type="PackedScene" uid="uid://bvod6kimm7qe7" path="res://Towers/IceTower/IceTowerMesh.tscn" id="2_mdkqr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cry6m"]
albedo_color = Color(0.254902, 0.917647, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_f7nks"]
material = SubResource("StandardMaterial3D_cry6m")
size = Vector3(3, 7, 3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dun5w"]
height = 7.0
radius = 2.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oaojn"]
height = 30.0
radius = 30.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bwe0f"]
blend_mode = 1
shading_mode = 0
albedo_color = Color(0, 0.713726, 0.835294, 1)

[sub_resource type="TorusMesh" id="TorusMesh_knahp"]
material = SubResource("StandardMaterial3D_bwe0f")
inner_radius = 29.0
outer_radius = 30.0

[sub_resource type="TorusMesh" id="TorusMesh_51bso"]
inner_radius = 2.5
outer_radius = 3.0

[node name="IceTower" type="Area3D" groups=["tower"]]
script = ExtResource("1_vn6cj")

[node name="IceTowerMesh" parent="." instance=ExtResource("2_mdkqr")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
visible = false
mesh = SubResource("BoxMesh_f7nks")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
shape = SubResource("CylinderShape3D_dun5w")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.54857, 0)

[node name="Attackrange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attackrange"]
shape = SubResource("CylinderShape3D_oaojn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Attackrange"]
visible = false
mesh = SubResource("TorusMesh_knahp")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Highlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("TorusMesh_51bso")

[connection signal="area_entered" from="Attackrange" to="." method="_on_attackrange_area_entered"]
[connection signal="area_exited" from="Attackrange" to="." method="_on_attackrange_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
